# tess-asteroids

./: .gitignore  .mypy.ini  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-mkdocs.yaml  deploy-mkdocs.yml  mypy.yml  ruff.yml  test.yml
docs/: README.md  movingtpf.md  utils.md
docs/tutorials/: tutorial2_rotation_periods.ipynb  tutorial3_multiple_apertures.ipynb
movingtpf/: index.html
search/: search_index.json
src/tess_asteroids/: __init__.py  movingtpf.py  tpf.py  utils.py
tests/: test_dummy.py  test_movingtpf.py  test_tpf.py  test_utils.py
tutorials/tutorial2_rotation_periods/: index.html  tutorial2_rotation_periods.ipynb
tutorials/tutorial3_multiple_apertures/: index.html
utils/: index.html
